syntax = "proto3";

package metrics;
option go_package = "github.com/am0xff/metrics/api/proto/gen";

service MetricsService {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message Metric {
  string id = 1;
  string type = 2;
  optional double value = 3;
  optional int64 delta = 4;
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
  bool success = 1;
}

message GetMetricRequest {
  string id = 1;
  string type = 2;
}

message GetMetricResponse {
  Metric metric = 1;
}

message GetMetricsRequest {}

message GetMetricsResponse {
  repeated Metric metrics = 1;
}

message PingRequest {}

message PingResponse {
  bool success = 1;
}